# gRPC-JWT-AuthService

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  container.py  database.py  docker-compose-example.yaml  docker-compose.yaml  main.py  models.py  pyproject.toml
.github/workflows/: docker.yml
config/: __init__.py  env_settings.py  logger_settings.py
decorators/: __init__.py  error_handler.py
domain/: enums.py  exceptions.py  values.py
domain/entities/: token.py  user.py
grpc_generated/: auth_pb2.py  auth_pb2_grpc.py
proto/: auth.proto
repository/: cache_fatory.py  memory_adapter.py  memory_repository.py  redis_repository.py  user_repository.py
scripts/: gen_proto.py
service/: __init__.py  auth_interceptor.py  auth_service.py  jwt_service.py  server.py  user_service.py
tests/: conftest.py  test_auth_sevice.py  test_containers.py  test_user_service.py
