[project]
name = "autintification-grpc-jwt"
version = "0.1.0"
description = ""
authors = [
    {name = "Sergey",email = "gerasimovsergey2004@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "grpcio (>=1.76.0,<2.0.0)",
    "grpcio-tools (>=1.76.0,<2.0.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "sqlalchemy (>=2.0.44,<3.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "redis (>=7.1.0,<8.0.0)",
    "dependency-injector (>=4.48.2,<5.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "pyjwt (>=2.10.1,<3.0.0)"
]

[project.optional-dependencies]
dev = [
    "pytest (>=9.0.1,<10.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "testcontainers[postgres,redis] (>=4.11.0,<5.0.0)",
    "greenlet (>=3.1.1,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = ">=3.12,<4.0"


[tool.poetry.group.dev.dependencies]
pytest = ">=9.0.1,<10.0.0"
pytest-asyncio = ">=1.3.0,<2.0.0"
testcontainers = {extras = ["postgres", "redis"], version = ">=4.11.0,<5.0.0"}
greenlet = ">=3.1.1,<4.0.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
pythonpath = ["."]

# Настройки логирования - отключаем вывод в терминал во время выполнения
log_cli_level = "DEBUG"
log_level = "DEBUG"

# Выводить логи только при ошибках
addopts = "-v --tb=short --show-capture=log"
filterwarnings = [
    "ignore::DeprecationWarning:testcontainers.core.waiting_utils",
    "ignore:Flushing object.*incompatible polymorphic identity.*logist.*:sqlalchemy.exc.SAWarning",
]

